Fix scrollbar flicker on Windows

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,12 +22,17 @@
   color: rgba(255, 255, 255, 0.87);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
